--- a/_config.yml
+++ b/_config.yml
@@ -285,6 +285,12 @@ compress_html:
 collections:
   projects:
     output: true
+    order:
+      - telekinetic-dodgeball.md
+      - dodgeball-2d.md
+      - cashier-guy.md
+      - slime-volleyball-godot.md
+      - slime-volleyball-unity.md
 
 # Defaults
 defaults:
